--- a/scripts/task_viewer/templates/compare_view.html
+++ b/scripts/task_viewer/templates/compare_view.html
@@ -87,6 +87,10 @@
             <a class="breadcrumb-item" href="/">Tasks</a>
             <a class="breadcrumb-item" href="/compare">Compare</a>
             <span class="breadcrumb-item active">{{ task_name }}</span>
+            {% if airscore_available is defined and airscore_available %}
+            <a class="breadcrumb-item ms-auto" href="/airscore/{{ task_name }}">AirScore Calculations</a>
+            {% endif %}
+            <a class="breadcrumb-item" href="/task/{{ task_name }}">View Task</a>
         </nav>
 
         <div class="d-flex justify-content-between align-items-center mb-4">
@@ -94,6 +98,24 @@
             <div>
                 <a href="/task/{{ task_name }}" class="btn btn-outline-secondary me-2">View Task</a>
                 <a href="/compare" class="btn btn-secondary">Back to List</a>
+            </div>
+        </div>
+        
+        {% if error %}
+        <div class="alert alert-danger">
+            <h4 class="alert-heading">Error</h4>
+            <p>{{ error }}</p>
+            {% if stacktrace %}
+            <hr>
+            <div class="mt-3">
+                <details>
+                    <summary>Show Stack Trace</summary>
+                    <pre class="mt-2 p-3 bg-light">{{ stacktrace }}</pre>
+                </details>
+            </div>
+            {% endif %}
+        </div>
+        {% else %}
             </div>
         </div>
 
@@ -515,5 +537,6 @@
             noDataMsg.addTo(map);
         }
     </script>
+{% endif %}
 </body>
 </html>
